minor updates to choosing graphic forms lecture

--- a/course-materials/lecture-slides/sections/choropleth.qmd
+++ b/course-materials/lecture-slides/sections/choropleth.qmd
@@ -4,7 +4,8 @@ format:
     slide-number: true
     highlight-style: a11y
     chalkboard: true
-    theme: ../../../meds-slides-styles.scss
+    theme: 
+      - ../../../meds-slides-styles.scss
 editor_options: 
   chunk_output_type: console
 ---
@@ -15,6 +16,7 @@ editor_options:
 #| message: false
 #| warning: false
 #| include: false
+#| fig-align: "center"
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                                    setup                                 ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -24,17 +26,18 @@ library(tidyverse)
 library(tigris)
 
 #.........................get shape data.........................
-county_geo <- tigris::counties(class = "sf", cb = TRUE) |>
+county_geo <- tigris::counties(class = "sf", cb = TRUE) |> 
   shift_geometry()
 
 #....................import precipitation data...................
-precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-feb19-jan24-precip.csv"), 
-                        skip = 4)
+precip_data <- read_csv(here::here("course-materials", "lecture-slides", "data", "county-nov20-oct25-precip.csv"), skip = 3) #4
+
+# "county-jan20-dec24-precip.csv"
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                               data wrangling                             ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+     
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##  ~ wrangle geometries  ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -66,7 +69,7 @@ precip_wrangled <- precip_data |>
 ##~~~~~~~~~~~~~~~~~~
 
 # join dfs (see https://github.com/tidyverse/ggplot2/issues/3936 & https://map-rfun.library.duke.edu/032_thematic_mapping_geom_sf.html) -------
-joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled)
+joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled) 
 ```
 
 ```{r}
@@ -75,7 +78,6 @@ joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled)
 #| message: false
 #| warning: false
 #| fig-align: "center"
-#| layout-ncol: 2
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                                 create map                               ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -86,8 +88,8 @@ joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled)
 
 base_map <- ggplot(joined_precip_geom) +
   geom_sf(aes(fill = perc_change), linewidth = 0.1) +
-  labs(title = "5-year precipitation compared with the 20th century average",
-       subtitle = "February 2019 - January 2024",
+  labs(title = "5-year precipitation compared to the 20th century average",
+       subtitle = "November 2020 - October 2025",
        caption = "Source: National Centers for Environmental Information") +
   theme_void() +
   theme(
@@ -107,7 +109,7 @@ my_brew_palette11 <- RColorBrewer::brewer.pal(n = 11, name = 'BrBG')
 ##  ~ create final map  ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-base_map +
+base_map + 
   scale_fill_gradientn(colors = my_brew_palette11,
                        labels = scales::label_percent(scale = 1),
                        breaks = scales::breaks_width(width = 10),
@@ -117,22 +119,5 @@ base_map +
                          max(na.omit(joined_precip_geom)$perc_change)))) +
   guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75))
 
-##~~~~~~~~~~~~~~~~~~~~~~~~~~
-##  ~ create bar chart  ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-joined_precip_geom |>
-  filter(state == "California") |>
-  mutate(county = str_remove(county, " County")) |>
-  slice_max(n = 10, order_by = precip) |>
-  ggplot(aes(x = reorder(county, precip), y = precip)) +
-  geom_bar(stat = "identity", width = 0.9, fill = "#635F5F") +
-  coord_flip() +
-  labs(x = "", y = "Total Precipitation (inches)",
-       title = "Top 10 California counties to recieve the most rainfall, Feb 2019 - Jan 2024") +
-  theme_classic() +
-  theme(
-    plot.title.position = "plot"
-  )
 ```
 
