--- a/course-materials/lecture-slides/syllabus-slides.qmd
+++ b/course-materials/lecture-slides/syllabus-slides.qmd
@@ -772,7 +772,7 @@ What you create can be used in your [**professional portfolio**]{.teal-text}! Th
 
 <div class="page-center vertical-center">
 <p class="custom-subtitle bottombr">{{< fa mug-hot title="a mug with steam rising out the top" >}} Take a Break</p>
-<p class="caption-text">*~ This is the end of Lesson 1 (of 3) ~*</p>
+<!-- <p class="caption-text">*~ This is the end of Lesson 1 (of 3) ~*</p> -->
 </div>
 
 ```{r}
