--- a/resources.qmd
+++ b/resources.qmd
@@ -20,7 +20,7 @@ toc: true
 ## Chart types {#chart-types}
 
 - **[From Data to Viz](https://www.data-to-viz.com/), by Yan Holtz & Conor Healy** -- a decision tree for deciding which chart type is most appropriate for your data
-- **[Chart Suggestions -- A Thought-Starter](https://extremepresentation.typepad.com/files/choosing-a-good-chart-09.pdf), by A. Abela** -- a single pdf decision tree, which uses the four main chart types to guide users towards selecting an appropriate visualization
+<!-- - **[Chart Suggestions -- A Thought-Starter](https://extremepresentation.typepad.com/files/choosing-a-good-chart-09.pdf), by A. Abela** -- a single pdf decision tree, which uses the four main chart types to guide users towards selecting an appropriate visualization -->
 - **[Data Viz Project](https://datavizproject.com/), by Ferdio (an infographic and data visualization agency in Copenhagen)** -- [100 different visualizations from one simple dataset](https://100.datavizproject.com/) 
 - **[Visual Vocabulary](https://ft-interactive.github.io/visual-vocabulary/), inspired by the Graphic Continuum by Jon Schwabish and Severino Ribecca** -- a helpful tool for choosing the right chart type based on the data relationship most important in your story
 
