--- a/course-materials/lecture-slides/dataviz-intro-slides.qmd
+++ b/course-materials/lecture-slides/dataviz-intro-slides.qmd
@@ -959,7 +959,7 @@ knitr::include_graphics("images/week1/why-r.png")
 
 <div class="page-center vertical-center">
 <p class="custom-subtitle bottombr">{{< fa mug-hot title="a mug with steam rising out the top" >}} Take a Break</p>
-<p class="caption-text">*~ This is the end of Lesson 2 (of 3) ~*</p>
+<!-- <p class="caption-text">*~ This is the end of Lesson 2 (of 3) ~*</p> -->
 </div>
 
 ```{r}
