small updates to storytelling slides for FPM #4

--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -44,7 +44,8 @@ Check out [these slides](supplementary/storytelling.qmd){target="_blank"} for so
 
 - [Un-sung Pollination Hero](https://marinakochuten.github.io/blog-posts/hoverflies/){target="_blank"}, by Marina Kochuten (MEDS 2025)
 - [Forest Restoration Reduces Wildfire Risk and Increases Carbon Storage](https://ohemond25.github.io/oliviahemond.github.io/posts/2025-03-11-forest-restoration/){target="_blank"}, by Liv Hemond (MESM 2025)
-- [Designing an Infographic on Shoreline Armoring and Coastal Resilience](https://liliamourier.github.io/Mourier-eds240-HW4/), by Lilia Mourier (MESM 2026)
+- [Designing an Infographic on Shoreline Armoring and Coastal Resilience](https://liliamourier.github.io/Mourier-eds240-HW4/){target="_blank"}, by Lilia Mourier (MESM 2026)
+- [Relationship between bee behavior and vineyard types in Germany](https://mwidas.github.io/blog-posts/2024-03-05-infographic-bees-wine/){target="_blank"}, by Melissa Widas (MEDS 2024)
 :::
 
 - [ ] **2.** Embed / render your final infographic following your introduction. If you are embedding a png file, ensure that it's centered and an apppropriate size. The same applies if you are rendering your infographic from code, though you should additionally ensure that: 
