--- a/course-materials/assignments/supplementary/storytelling.qmd
+++ b/course-materials/assignments/supplementary/storytelling.qmd
@@ -776,6 +776,12 @@ Remember, you can set options in your blog post's YAML or on a chunk-by-chunk ba
 
 <hr>
 
+<br>
+
+[If your blog post contains code, make sure it's easily readable and generally pleasant to look at:]{.body-text-m}
+
+<br>
+
 - use logical variable / object names
 - include clear, succinct, and nicely structured code annotations, as appropriate (check out the [`{ARTofR}` package](https://github.com/Hzhang-ouce/ARTofR){target="_blank"})
 - consider [*folding* code](https://quarto.org/docs/output-formats/html-code.html#folding-code){target="_blank"} so that readers can expand / collapse code as needed (set `code-fold: true` in your post's YAML, or on a chunk-by-chunk basis)
