--- a/course-materials/lecture-slides/SLIDES-alt-charts.qmd
+++ b/course-materials/lecture-slides/SLIDES-alt-charts.qmd
@@ -15,7 +15,7 @@ editor_options:
 
 [EDS 240: Lecture 10.1]{.custom-title}
 
-[*Misc. charts: waffle & bump charts*]{.custom-subtitle}
+[*Alternative chart types: waffle & bump charts*]{.custom-subtitle}
 
 <hr class="hr-teal">
 
