--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -73,7 +73,7 @@ Template `.qmd` files will be provided alongside (most) lecture slides to help k
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
 | [Lecture 1.1: course logistics & syllabus](lecture-slides/SLIDES-syllabus.qmd){target="_blank"}  | *NA* | *NA* |
 | [Lecture 1.2: data viz intro](lecture-slides/SLIDES-dataviz-intro.qmd){target="_blank"}  | *NA* | *NA* |
-| [Lecture 1.3: `{ggplot2}` review](lecture-slides/SLIDES-ggplot-review.qmd){target="_blank"}  | [1.3 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week1/TEMPLATE-ggplot-review.qmd){target="_blank"} | [1.3 key](keys/KEY-ggplot-review.qmd){target="_blank"} |
+| [Lecture 1.3: `{ggplot2}` review](lecture-slides/SLIDES-ggplot-review.qmd){target="_blank"}  | [1.3 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-ggplot-review.qmd){target="_blank"} | [1.3 key](keys/KEY-ggplot-review.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"}
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
@@ -135,7 +135,7 @@ Add a new blank file to your class repo -- you'll complete your lab exercises he
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [L1 slides: data wrangling](lab/week1/week1-slides.qmd){target="_blank"} | [L1 exercise: wrangle fracking data](lab/week1/week1-exercise.qmd) | [L1 solution](lab/week1/week1-solution.qmd) |
+| [Lab 1 slides: data wrangling](lab/week1/week1-slides.qmd){target="_blank"} | [Lab 1 exercise: wrangle fracking data](lab/week1/week1-exercise.qmd) | [Lab 1 solution](lab/week1/week1-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
