--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -50,8 +50,8 @@ Save data to your class repo at `EDS-240-class-examples/week2/data/`:
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 2.1: choosing graphic form](lecture-slides/SLIDES-choosing-graphic-forms.qmd){target="_blank"}  | *NA* | *NA* |
-| [Lecture 2.2: visualizing distributions](lecture-slides/SLIDES-distributions.qmd){target="_blank"} | [2.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week2/TEMPLATE-distributions.qmd){target="_blank"} | [2.2 key](keys/KEY-distributions.qmd){target="_blank"} |
+| [Lecture 2.1: choosing graphic form](lecture-slides/SLIDES-choosing-graphic-form.qmd){target="_blank"}  | *NA* | *NA* |
+| [Lecture 2.2: visualizing distributions](lecture-slides/SLIDES-distributions.qmd){target="_blank"} | [2.2 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-distributions.qmd){target="_blank"} | [2.2 key](keys/KEY-distributions.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
@@ -67,7 +67,7 @@ Install the [ColorZilla](https://chromewebstore.google.com/detail/colorzilla/bhl
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [L2 slides: USDM](lab/week2/week2-slides.qmd){target="_blank"} | [L2 exercise: recreate USDM viz](lab/week2/week2-exercise.qmd) | [L2 solution](lab/week2/week2-solution.qmd) |
+| [Lab 2 slides: USDM](lab/week2/week2-slides.qmd){target="_blank"} | [Lab 2 exercise: recreate USDM viz](lab/week2/week2-exercise.qmd) | [Lab 2 solution](lab/week2/week2-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
