--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -26,7 +26,7 @@ Download all necessary templates (links in the table below) and save them to a `
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
 |------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
-| [Lecture 9.1: misc. chart types](lecture-slides/SLIDES-misc-charts.qmd){target="_blank"}  | [9.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/week10/TEMPLATE-misc-charts.qmd){target="_blank"} | [10.1 key](keys/KEY-misc-charts.qmd){target="_blank"} |
+| [Lecture 9.1: alternative chart types](lecture-slides/SLIDES-alt-charts.qmd){target="_blank"}  | [9.1 template](https://github.com/EDS-240-Data-Viz/code-along-templates/blob/main/TEMPLATE-alt-charts.qmd){target="_blank"} | [10.1 key](keys/KEY-alt-charts.qmd){target="_blank"} |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
