started remaking the amounts & relationships lecture to replace jobs data with USGS water availability data

--- a/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
+++ b/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
@@ -13,13 +13,13 @@ editor_options:
 
 ## {#title-slide data-menu-title="Title Slide" background="#053660"} 
 
-[EDS 240: Lecture 4.1]{.custom-title}
+[EDS 240: Lecture 3.2]{.custom-title}
 
 [*Visualizing amounts / rankings*]{.custom-subtitle}
 
 <hr class="hr-teal">
 
-[Week 4 | January 27^th^, 2025]{.custom-subtitle3}
+[*Archive (job data) | see [latest version] of this lesson*]{.custom-subtitle3}
 
 ---
 
